src/main/java/com/example/armaria/errors/ArmorerNotFoundException.java
package com.example.armaria.errors;

public class ArmorerNotFoundException extends RuntimeException {
  public ArmorerNotFoundException(String message) {
    super(message);
  }
}
